name:                 hlogo
version:              0.0.5
synopsis:             HLogo, a simulation framework in Haskell
description:          Input programs are written in a dialect of Logo, as an embedded DSL of Haskell.
author:               Nikolaos Bezirgiannis <bezirgia@cwi.nl>, Wishnu Prasetya <s.w.b.prasetya@uu.nl>, Ilias Sakellariou <iliass@uom.gr>
maintainer:           Nikolaos Bezirgiannis <bezirgia@cwi.nl>
stability:            provisional
build-type:           Simple
license:	          BSD3
license-file:	      LICENSE
cabal-version:        >= 1.8
category:             Language, Concurrency
                      
source-repository head
  type:     git
  location: git@bitbucket.org:bezirg/hlogo.git

Flag stats-stm {
  Description: When compiled with this flag on, it collects runtime statistics for total and succesful stm rollbacks. To print the collected statistics use the HLogo's 'stats_stm' primitive"
  Default:     False
}

library
  build-depends:      
                      -- supporting GHC>=7.6
                      base>=4.6.0.0 && <5, 
                      -- for command-line setting the World 2d-space options (max-pxcor, world wrapping)
                      cmdargs,
                      -- for now: world-patch-set&link-set are a Map (Int,Int), world-turtle-set are IntMap                             
                      containers>=0.5.0.0, 
                      -- for now: turtles-own, patches-own,links-own stored in a static (=fixed at compile-time) array
                      array, 
                      -- for adding a context reader ontop of stm
                      transformers>=0.4, 
                      -- for random-related functions in stdlib
                      random, time,
                      -- for top-level macros (globals,patches-own,breed definition,etc)
                      template-haskell,
                      -- For concurrency (non-deterministic)
                      stm, 
                      -- For concurrent threads management
                      threads, 
                      -- For visualization
                      diagrams-lib>=1.3, 
                      diagrams-postscript, 
                      colour
  exposed-modules:    Language.Logo, 
                      Language.Logo.Base, 
                      Language.Logo.Core, 
                      Language.Logo.Keyword, 
                      Language.Logo.Prim, 
                      Language.Logo.Exception
  other-modules:      Language.Logo.Conf
  extensions:         DeriveDataTypeable, TemplateHaskell, CPP
  ghc-options:        -Wall -fno-warn-unused-do-bind
  if flag(stats-stm)
     cpp-options:     -DSTATS_STM
  hs-source-dirs:     src

-- TEST SUITE
-------------

test-suite test
  type:               exitcode-stdio-1.0
  main-is:            Test.hs
  build-depends:      hlogo, base, transformers>=0.4, test-framework, test-framework-hunit, test-framework-th, HUnit
  extensions:         DeriveDataTypeable, TemplateHaskell, CPP
  ghc-options:        -fno-ignore-asserts
  hs-source-dirs:     test                        

-- BENCHMARKS
-------------

benchmark fwdback
  type:           exitcode-stdio-1.0
  main-is:        FwdBack.hs
  build-depends:  hlogo, base
  extensions:     DeriveDataTypeable, TemplateHaskell, CPP, NoImplicitPrelude                                                
  ghc-options:    -threaded "-with-rtsopts=-t --machine-readable"
  hs-source-dirs: bench/hlogo

benchmark termites
  type:           exitcode-stdio-1.0
  main-is:        Termites.hs
  build-depends:  hlogo, base
  extensions:     DeriveDataTypeable, TemplateHaskell, CPP, NoImplicitPrelude                                                
  ghc-options:    -threaded "-with-rtsopts=-t --machine-readable" 
  hs-source-dirs: bench/hlogo

benchmark fire
  type:           exitcode-stdio-1.0
  main-is:        Fire.hs
  build-depends:  hlogo, base
  extensions:     DeriveDataTypeable, TemplateHaskell, CPP, NoImplicitPrelude                                                
  ghc-options:    -threaded "-with-rtsopts=-t --machine-readable" 
  hs-source-dirs: bench/hlogo

benchmark heatbugs
  type:           exitcode-stdio-1.0
  main-is:        Heatbugs.hs
  build-depends:  hlogo, base
  extensions:     DeriveDataTypeable, TemplateHaskell, CPP, NoImplicitPrelude                                                
  ghc-options:    -threaded "-with-rtsopts=-t --machine-readable" 
  hs-source-dirs: bench/hlogo

-- SHEEP BENCHMARK
-------------------

benchmark sheep100
  type:           exitcode-stdio-1.0
  main-is:        Sheep.hs
  build-depends:  hlogo, base
  extensions:     DeriveDataTypeable, TemplateHaskell, CPP, NoImplicitPrelude                                                
  ghc-options:    -threaded "-with-rtsopts=-t --machine-readable" 
  cpp-options:    -DNR_SHEEP=100
  hs-source-dirs: bench/hlogo
benchmark sheep250
  type:           exitcode-stdio-1.0
  main-is:        Sheep.hs
  build-depends:  hlogo, base
  extensions:     DeriveDataTypeable, TemplateHaskell, CPP, NoImplicitPrelude                                                
  ghc-options:    -threaded "-with-rtsopts=-t --machine-readable" 
  cpp-options:    -DNR_SHEEP=250
  hs-source-dirs: bench/hlogo
benchmark sheep500
  type:           exitcode-stdio-1.0
  main-is:        Sheep.hs
  build-depends:  hlogo, base
  extensions:     DeriveDataTypeable, TemplateHaskell, CPP, NoImplicitPrelude                                                
  ghc-options:    -threaded "-with-rtsopts=-t --machine-readable" 
  cpp-options:    -DNR_SHEEP=500
  hs-source-dirs: bench/hlogo
benchmark sheep1000
  type:           exitcode-stdio-1.0
  main-is:        Sheep.hs
  build-depends:  hlogo, base
  extensions:     DeriveDataTypeable, TemplateHaskell, CPP, NoImplicitPrelude                                                
  ghc-options:    -threaded "-with-rtsopts=-t --machine-readable" 
  cpp-options:    -DNR_SHEEP=1000
  hs-source-dirs: bench/hlogo
benchmark sheep2000
  type:           exitcode-stdio-1.0
  main-is:        Sheep.hs
  build-depends:  hlogo, base
  extensions:     DeriveDataTypeable, TemplateHaskell, CPP, NoImplicitPrelude                                                
  ghc-options:    -threaded "-with-rtsopts=-t --machine-readable" 
  cpp-options:    -DNR_SHEEP=2000
  hs-source-dirs: bench/hlogo
benchmark sheep3000
  type:           exitcode-stdio-1.0
  main-is:        Sheep.hs
  build-depends:  hlogo, base
  extensions:     DeriveDataTypeable, TemplateHaskell, CPP, NoImplicitPrelude                                                
  ghc-options:    -threaded "-with-rtsopts=-t --machine-readable" 
  cpp-options:    -DNR_SHEEP=3000
  hs-source-dirs: bench/hlogo

-- REDBLUE BENCHMARK
--------------------

benchmark redblue1000
  type:           exitcode-stdio-1.0
  main-is:        RedBlue.hs
  build-depends:  hlogo, base
  extensions:     DeriveDataTypeable, TemplateHaskell, CPP, NoImplicitPrelude                                                
  ghc-options:    -threaded "-with-rtsopts=-t --machine-readable" 
  cpp-options:    -DNR_TURTLES=1000
  hs-source-dirs: bench/hlogo
benchmark redblue2500
  type:           exitcode-stdio-1.0
  main-is:        RedBlue.hs
  build-depends:  hlogo, base
  extensions:     DeriveDataTypeable, TemplateHaskell, CPP, NoImplicitPrelude                                                
  ghc-options:    -threaded "-with-rtsopts=-t --machine-readable" 
  cpp-options:    -DNR_TURTLES=2500
  hs-source-dirs: bench/hlogo
benchmark redblue5000
  type:           exitcode-stdio-1.0
  main-is:        RedBlue.hs
  build-depends:  hlogo, base
  extensions:     DeriveDataTypeable, TemplateHaskell, CPP, NoImplicitPrelude                                                
  ghc-options:    -threaded "-with-rtsopts=-t --machine-readable" 
  cpp-options:    -DNR_TURTLES=5000
  hs-source-dirs: bench/hlogo
benchmark redblue10000
  type:           exitcode-stdio-1.0
  main-is:        RedBlue.hs
  build-depends:  hlogo, base
  extensions:     DeriveDataTypeable, TemplateHaskell, CPP, NoImplicitPrelude                                                
  ghc-options:    -threaded "-with-rtsopts=-t --machine-readable" 
  cpp-options:    -DNR_TURTLES=10000
  hs-source-dirs: bench/hlogo
benchmark redblue20000
  type:           exitcode-stdio-1.0
  main-is:        RedBlue.hs
  build-depends:  hlogo, base
  extensions:     DeriveDataTypeable, TemplateHaskell, CPP, NoImplicitPrelude                                                
  ghc-options:    -threaded "-with-rtsopts=-t --machine-readable" 
  cpp-options:    -DNR_TURTLES=20000
  hs-source-dirs: bench/hlogo
benchmark redblue30000
  type:           exitcode-stdio-1.0
  main-is:        RedBlue.hs
  build-depends:  hlogo, base
  extensions:     DeriveDataTypeable, TemplateHaskell, CPP, NoImplicitPrelude                                                
  ghc-options:    -threaded "-with-rtsopts=-t --machine-readable" 
  cpp-options:    -DNR_TURTLES=30000
  hs-source-dirs: bench/hlogo
